Vertices visible in XRay/Edit Mode can't be reselected after initial select and transform operation #57770

Closed
opened 2018-11-11 00:34:38 +01:00 by Alex Chamberlain · 33 comments

System Information
Mac OSX Sierra (10.12)
nVidia GeForce GTX 780

Blender Version
Broken: 2018-11-10 00:04
Hash: dc21ef7b86
Branch: blender2.8

Short description of error
Vertices visible in Xray/Edit Mode can't be reselected after initial select and transform operation

Exact steps for others to reproduce the error
Tab into edit mode, Select a vertex in wireframe view mode (at the back of the mouth in the included .blend file), move it, select another vertex, move it also, attempt to select the first vertex again, and it will be un-selectable. This happens in more than just this file, and on multiple computers. I hope I'm submitting this correctly. This is my first time submitting a bug to the Blender Foundation. Thanks.

image.png
T-Rex.005.bugfix.blend
system-info.txt

**System Information** Mac OSX Sierra (10.12) nVidia GeForce GTX 780 **Blender Version** Broken: 2018-11-10 00:04 Hash: dc21ef7b86c Branch: blender2.8 **Short description of error** Vertices visible in Xray/Edit Mode can't be reselected after initial select and transform operation **Exact steps for others to reproduce the error** Tab into edit mode, Select a vertex in wireframe view mode (at the back of the mouth in the included .blend file), move it, select another vertex, move it also, attempt to select the first vertex again, and it will be un-selectable. This happens in more than just this file, and on multiple computers. I hope I'm submitting this correctly. This is my first time submitting a bug to the Blender Foundation. Thanks. ![image.png](https://archive.blender.org/developer/F5484216/image.png) [T-Rex.005.bugfix.blend](https://archive.blender.org/developer/F5484220/T-Rex.005.bugfix.blend) [system-info.txt](https://archive.blender.org/developer/F5484223/system-info.txt)

Added subscriber: @AlexanderChamberlain

Added subscriber: @AlexanderChamberlain

#57137 was marked as duplicate of this issue

#57137 was marked as duplicate of this issue

#58753 was marked as duplicate of this issue

#58753 was marked as duplicate of this issue

#58765 was marked as duplicate of this issue

#58765 was marked as duplicate of this issue

#58514 was marked as duplicate of this issue

#58514 was marked as duplicate of this issue

#58534 was marked as duplicate of this issue

#58534 was marked as duplicate of this issue

#58498 was marked as duplicate of this issue

#58498 was marked as duplicate of this issue

#58464 was marked as duplicate of this issue

#58464 was marked as duplicate of this issue

#58348 was marked as duplicate of this issue

#58348 was marked as duplicate of this issue

#58291 was marked as duplicate of this issue

#58291 was marked as duplicate of this issue

#57781 was marked as duplicate of this issue

#57781 was marked as duplicate of this issue
Member

Added subscribers: @ideasman42, @lichtwerk

Added subscribers: @ideasman42, @lichtwerk
Campbell Barton was assigned by Philipp Oeser 2018-11-12 12:31:31 +01:00
Member

Can confirm (also tried different OpenGL selection methods in User Preferences to no avail), seems like something is not updated in the selection buffer [not familiar with that part of the code though...]?
If you click in the same place where vertex was position previously (the "original" position -- without the translation), you can still select that vertex just fine...

@ideasman42 : mind having a look?

Can confirm (also tried different OpenGL selection methods in User Preferences to no avail), seems like something is not updated in the selection buffer [not familiar with that part of the code though...]? If you click in the same place where vertex was position previously (the "original" position -- without the translation), you can still select that vertex just fine... @ideasman42 : mind having a look?
Philipp Oeser changed title from Vertices visible in Wireframe/Edit Mode can't be reselected after initial select and transform operation to Vertices visible in XRay/Edit Mode can't be reselected after initial select and transform operation 2018-11-12 13:29:56 +01:00
Member

Added subscriber: @DenisGualtieri

Added subscriber: @DenisGualtieri
Member

Added subscriber: @fclem

Added subscriber: @fclem
Member

Doesnt have to be Wireframe, XRay is the suspect here (also hns in solid, lookdev, rendered)...

Maybe @fclem knows, too?

Doesnt have to be Wireframe, `XRay` is the suspect here (also hns in solid, lookdev, rendered)... Maybe @fclem knows, too?
Member

Added subscriber: @kostex

Added subscriber: @kostex
Member

Here's a quick screencap showing the bug (on ubuntu linux)

https://youtu.be/mKlW1-RJY1g

Here's a quick screencap showing the bug (on ubuntu linux) https://youtu.be/mKlW1-RJY1g
Member

Added subscriber: @cschumann

Added subscriber: @cschumann
Member

Added subscribers: @EdHernandez, @JacquesLucke

Added subscribers: @EdHernandez, @JacquesLucke
Member

Added subscriber: @DNCLCFW

Added subscriber: @DNCLCFW
Member

Added subscriber: @MostHated

Added subscriber: @MostHated
Member

Added subscriber: @michellacerda

Added subscriber: @michellacerda
Member

Added subscribers: @vstoaldo, @sebastian_k

Added subscribers: @vstoaldo, @sebastian_k

A workaround for this bug is switching out and in of edit mode. I assigned TAB to change between modes instead of opening the Modes Pie, so it's a quick double tab to fix.

Another thing that I can add is that this isn't specific to vertices. This bug also affects edges and faces.

A workaround for this bug is switching out and in of edit mode. I assigned TAB to change between modes instead of opening the Modes Pie, so it's a quick double tab to fix. Another thing that I can add is that this isn't specific to vertices. This bug also affects edges and faces.
Member

Added subscriber: @yaelvalle

Added subscriber: @yaelvalle
Member

Added subscriber: @Imphenzia

Added subscriber: @Imphenzia
Member

just to mention another selection-related bug: #57125 (havent looked at code, but these might share same roots...)

This is being reported quite often now, so I'll poke @ideasman42 again to share his wisdom (or put on someone elses desk...) and set on High priority...

just to mention another selection-related bug: #57125 (havent looked at code, but these might share same roots...) This is being reported quite often now, so I'll poke @ideasman42 again to share his wisdom (or put on someone elses desk...) and set on High priority...
Member

Added subscriber: @EricBu

Added subscriber: @EricBu

Added subscriber: @TheCharacterhero-4

Added subscriber: @TheCharacterhero-4

My bug report also refers to this error https://developer.blender.org/T58056

My bug report also refers to this error https://developer.blender.org/T58056

This issue was referenced by 095f9f26aa

This issue was referenced by 095f9f26aabcc3edd8f7ad4d0e74fb4de979aa1a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57770
No description provided.