Fix T57770: Edit-mesh wireframe cage select fails