source/blender/blenkernel/BKE_DerivedMesh.h
@@ -508,6 +508,9 @@ DerivedMesh *mesh_create_derived(struct Mesh *me, float (*vertCos)[3]);
 struct Mesh *editbmesh_get_eval_cage(
         struct Depsgraph *depsgraph, struct Scene *scene, struct Object *,
         struct BMEditMesh *em, CustomDataMask dataMask);
+struct Mesh *editbmesh_get_eval_cage_from_orig(
+        struct Depsgraph *depsgraph, struct Scene *scene, struct Object *,
+        struct BMEditMesh *em, CustomDataMask dataMask);
 struct Mesh *editbmesh_get_eval_cage_and_final(
         struct Depsgraph *depsgraph, struct Scene *scene, struct Object *,
         struct BMEditMesh *em, CustomDataMask dataMask,
